@@ -1,4 +1,8 @@
-﻿drkns 19.09.2014 23:47:55 +0200 - build 4110
+﻿drkns 20.09.2014 17:00:20 +0200 - build 4111
+
+1. Именованные группы в регулярных выражениях. Пока только на уровне библиотеки.
+
+drkns 19.09.2014 23:47:55 +0200 - build 4110
 
 1. Разделим common.hpp на компоненты, а то совсем тёмный лес уже.
 
